# xgcom

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  PageName.md  ProjectHome.md  README  README.md  config.h  config.status  config.status.lineno  configure  configure.in  xgcom.md
src/: About.c  About.h  Cfg.h  CfgFace.c  FootFace.c  Funs.c  Funs.h  LeftVboxCall.c  LeftVboxFace.c  MainWindow.c  MainWindow.h  Makefile  Makefile.am  MenuCall.c  MenuCall.h  MenuFace.c  MenuFace.h  RightVboxFace.c  RightVboxFace.h  SendFile.c  SendFile.h  Serie.c  Serie.h  callbacks.c  debug.h  main.c  support.c  support.h
src/.deps/: About.Po  CfgFace.Po  FootFace.Po  Funs.Po  LeftVboxCall.Po  LeftVboxFace.Po  MenuCall.Po  MenuFace.Po  RightVboxFace.Po  SendFile.Po  Serie.Po  interface.Po  main.Po  mainwindow.Po  support.Po
trunk/: AUTHORS  Makefile  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.in  configure.lineno
trunk/autom4te.cache/: output.0  requests  traces.0  traces.1
trunk/doc/: XGCom-intro.doc
trunk/po/: Makefile
trunk/src/: About.c  About.h  Cfg.h  CfgFace.c  FootFace.c  FootFace.h  Funs.c  Funs.h  LeftVboxCall.c  LeftVboxCall.h  LeftVboxFace.c  LeftVboxFace.h  MainWindow.c  MainWindow.h  Makefile.in  MenuCall.c  MenuCall.h  MenuFace.c  MenuFace.h  RightVboxFace.c  RightVboxFace.h  SendFile.c  SendFile.h  Serie.c  Serie.h  callbacks.h  debug.h  main.c  support.c  support.h
trunk/src/.deps/: About.Po  CfgFace.Po  Funs.Po  LeftVboxCall.Po  MainWindow.Po  MenuCall.Po  MenuFace.Po  RightVboxFace.Po  SendFile.Po  Serie.Po  callbacks.Po  main.Po  (+2 more)
(+8 files in other folders)
